# eudaq_hidra

./: .gitignore  README.md
.github/workflows/: ci-build.yml
legacy/pre2/filerws/src/: FileWriterNull.cc
main/lib/core/include/eudaq/: Event.hh
user/hidra/: .clang-format  .gitignore  CMakeLists.txt  DatFormatv2.md  DataFormat.md  DataFormatv2.md  DataFormatv3.md  README.md
user/hidra/common/: CMakeLists.txt
user/hidra/common/include/: DurationAccumulator.hh  EventSerializer.hh  HidraUtils.hh  ScopedTimer.hh  TimeAlignmentCalibrator.hh
user/hidra/common/src/: EventSerializer.cc  HidraUtils.cc  TimeAlignmentCalibrator.cc
user/hidra/dc/: CMakeLists.txt  README.md
user/hidra/dc/include/: HidraDataCollector.hh  HidraEvent.hh  HidraEventMeta.hh  HidraFersDecoder.hh  HidraFersEvent.hh  HidraMergedBinaryWriter.hh  HidraMetaDecoder.hh  HidraRootEventWriter.hh  HidraRootPayloadDecoders.hh  HidraXdcDecoder.hh  HidraXdcEvent.hh
user/hidra/dc/src/: HidraDataCollector.cc  HidraFersDecoder.cc  HidraMergedBinaryWriter.cc  HidraMetaDecoder.cc  HidraNullFileWriter.cc  HidraRootEventWriter.cc  HidraRootPayloadDecoders.cc  HidraXdcDecoder.cc  test_HidraDataCollector_with_parallel_writing.cc
user/hidra/dc/test/: CMakeLists.txt  HidraRootPayloadDecodersAdvancedTest.cc  HidraRootPayloadDecodersTest.cc
user/hidra/dry/: CMakeLists.txt  README.md
user/hidra/dry/include/: HidraDryFERSProducer.hh  HidraDryXDCProducer.hh
user/hidra/dry/src/: HidraDryFERSProducer.cc  HidraDryXDCProducer.cc
user/hidra/dry/test/: CMakeLists.txt  HidraDryXDCProducerAdvancedTest.cc  HidraDryXDCProducerTest.cc  HidraDryXDCProducerTestFixtures.hh  README.md  build_tests.sh  invalid_marker.xdc  test_data.xdc  truncated.xdc
user/hidra/fers/misc/conf/: FERSlib_Config1.txt  Janus_Config.txt
user/hidra/fers/module/src/: FERSProducer.cc
user/hidra/fers2/: CMakeLists.txt  README.md
user/hidra/fers2/config/: Janus_Config.txt
user/hidra/fers2/include/: FERSBoard.h  FERSBoardManager.h  FERSConfiguration.h  FERSPayloadSerialization.h  FERSTypes.h  FersException.h  FersHandle.h
user/hidra/fers2/src/: FERSBoard.cc  FERSBoardManager.cc  FERSConfiguration.cc  HidraFERS2Producer.cc
user/hidra/misc/: CMakePresets.hidra.json  INDEX.md  hexdump_fers2025.py  hidra_live_decode.py  hidra_raw_parser.py  setup.sh
user/hidra/misc/dashboard/rc_mon/: api.php  index.php
user/hidra/misc/parse_eudaq_events/: DELIVERY_SUMMARY.md  README.md  examples.sh  parse_eudaq_events.py
user/hidra/monitor/: CMakeLists.txt  HidraMonitor.cc  README.md
user/hidra/monitor/frontend/: README.md  app.py  config.yaml  requirements.txt  run.sh
user/hidra/monitor/frontend/assets/: base.css  ui_effects.js
user/hidra/monitor/frontend/hidra_frontend/: backend_client.py  config.py  figure_builder.py  layout.py  overlay.py  perf.py  theme.py
user/hidra/monitor/frontend/hidra_frontend/callbacks/: __init__.py  controls.py  graph_controls.py  navigation.py  overlay.py  poll.py
user/hidra/monitor/frontend/hidra_frontend/decoders/: __init__.py  base.py  pure.py  pyroot.py
user/hidra/monitor/frontend/hidra_frontend/mapping/: __init__.py  adc_channels.json  calo_mapping.py  modules.json
user/hidra/monitor/frontend/hidra_frontend/panels/: __init__.py  base.py  channel_selector.py  detector.py  graph_controls.py  grid.py  histogram_grid.py  metric.py  rate.py
user/hidra/monitor/include/: FillerChain.hh  HidraHttpMonitor.hh  HidraMonitor.hh  HistogramPublisher.hh  HistogramRegistry.hh  IHistogramFiller.hh  MetaFiller.hh  SummaryFiller.hh  XDCFiller.hh
user/hidra/monitor/src/: FillerChain.cc  HidraHttpMonitor.cc  HidraMonitor.cc  HistogramPublisher.cc  HistogramRegistry.cc  MetaFiller.cc  SummaryFiller.cc  XDCFiller.cc
user/hidra/rc/: CMakeLists.txt
user/hidra/rc/src/: HidraLogCollectorGUI.cc  HidraLogCollectorGUI.hh  HidraRunControl.cc  hidraLog.cxx
user/hidra/run/: CONFIG.md  README.md  hidra_startrun.sh  hidra_startrun_dry.sh  hidra_startrun_fers.sh  hidra_startrun_joint.sh
user/hidra/run/config/: dry.conf  dry.ini  hidra.conf  hidra.ini
user/hidra/run/config/janus/: FERSlib_Config_oneboard.txt
user/hidra/run/monitoring/: run000098_status.jsonl  run000099_status.jsonl  run000100_status.jsonl  run000101_status.jsonl
user/hidra/xdc/: CMakeLists.txt  README.md
user/hidra/xdc/src/: HidraQTPDProducer.cc
